syntax = "proto3";

package polyglot;

option java_outer_classname = "HelloProto";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "src/main/proto/greeting.proto";

message HelloRequest {
  string recipient = 1;
}

message HelloResponse {
  string message = 1;
  Greeting greeting = 2;
  google.protobuf.Any any = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// A message used as the payload of the "any" field above.
message AnyPayload {
  int32 number = 1;
}

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse) {}
  rpc SayHelloBidi (stream HelloRequest) returns (stream HelloResponse) {}
}
